tests/bad/include_floats/missing_file.stderr
error: couldn't read $DIR/tests/bad/include_floats/../../test_data/non-existent: No such file or directory (os error 2)
 --> tests/bad/include_floats/missing_file.rs:6:27
  |
6 | static BYTES_31: &[f64] = include_floats!(f64, "../../test_data/non-existent");
  |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `::core::include_bytes` which comes from the expansion of the macro `include_floats` (in Nightly builds, run with -Z macro-backtrace for more info)
